# logos

./: .bazelignore  .bazelproject  .bazelrc  .gitignore  .npmrc  AGENTS.md  BUILD  COMMIT_MESSAGE.txt  LICENSE  MODULE.bazel  README.md  WORKSPACE  gitops.bzl  grpc_web.bzl  logos  maven_install.json  notes.txt  package-lock.json  package.json  pnpm-lock.yaml  requirements.txt  requirements_lock.txt  tsconfig.json  ybox
.devcontainer/: Dockerfile  aws_config.sh  devcontainer.json
.eclipse/: .bazelproject
.ijwb/: .bazelproject
app/: BUILD
app/auth/cognito/: BUILD
app/auth/cognito/module/: BUILD  CognitoModule.java
app/auth/cognito/permission/: BUILD  Permission.java
app/auth/cognito/proto/: BUILD  cognito.proto
app/auth/cognito/service/: BUILD  CognitoService.java  CognitoServiceTest.java
app/auth/cognito/user/: AuthenticatedUser.java  BUILD  CognitoUser.java
app/auth/cognito/web/: BUILD
app/auth/dev/module/: BUILD  DevModule.java
app/auth/interceptor/: AuthInterceptor.java  BUILD
app/auth/interceptor/cognito/: BUILD  CognitoServerInterceptor.java
app/auth/interceptor/cookie/: BUILD  CookieServerInterceptor.java
app/auth/k8s/machine/: BUILD  ServiceAccountMachine.java  ServiceAccountMachineTest.java
app/auth/k8s/module/: BUILD  K8sModule.java
app/auth/module/: AuthModule.java  BUILD
app/auth/module/data/: BUILD  CognitoHostConfig.java  CognitoHostSecret.java
app/auth/permission/: BUILD  Permission.java
app/auth/proto/: BUILD  auth.proto  cognito.proto
app/auth/service/: AuthService.java  BUILD  CognitoService.java
app/auth/storage/: AuthCredentialStorage.java  BUILD
app/auth/user/: AuthenticatedUser.java  BUILD
app/auth/web/: BUILD  state.ts  store.ts
app/auth/web/client/: BUILD
app/auth/web/components/: login.ts  register.ts
app/auth/web/interceptor/: cognito-auth-interceptor.ts
app/auth/web/module/: auth-module.ts
app/digits/module/: BUILD  DigitsModule.java
app/digits/proto/: BUILD  voice.proto
app/digits/service/: BUILD  PhoneNumberStorageService.java  VoiceService.java
app/digits/storage/: BUILD  PhoneNumberStorage.java
app/digits/storage/migrations/: 00001_schema_digits.sql  00002_table_digits_phone_number.sql  BUILD
app/digits/web/: BUILD
app/digits/web/client/: BUILD
app/rep/: LICENSE  truffle-config.js
app/rep/eth/contracts/: Market.sol  Migrations.sol  WebOfTrust.sol
app/rep/eth/migrations/: 2_deploy_contracts.js
app/rep/eth/test/: TestWebOfTrust.js  my-element.test.ts
app/rep/web/: BUILD  cytoscape.ts
app/rep/web/contracts/: Ad.json  Market.json  Migrations.json  WebOfTrust.json
app/review/: BUILD
app/review/grammar/: AIPName.g4  BUILD  Java9.g4
app/review/proto/: BUILD  annotation.proto  file.proto  project.proto
app/review/service/: BUILD  FileService.java  ProjectService.java
app/review/storage/: BUILD  FileStorage.java  ProjectStorage.java
app/review/storage/migrations/: 00001_schema_review.sql  00002_table_review_project.sql  BUILD
app/review/web/: BUILD  review-editor.ts
app/review/web/client/: BUILD
app/summer/jobs/email/: BUILD  imap.py
app/summer/jobs/feeds/: BUILD  rss.py
app/summer/module/: BUILD  SummerModule.java
app/summer/proto/: BUILD  feed.proto
app/summer/service/: BUILD  EntryStorageService.java  FeedService.java  SourceImapStorageService.java  SourceRssStorageService.java
app/summer/storage/: BUILD  EntryStorage.java  SourceRssStorage.java
app/summer/storage/migrations/: 00001_schema_summer.sql  00002_table_summer_source_rss.sql  00003_table_summer_entry.sql  00004_table_summer_topic.sql  00005_table_summer_source_imap.sql  BUILD
app/summer/web/: BUILD  frame-root.ts  index.ts  login-complete.ts  router.ts  view-explore.ts  view-feed-entry.ts  view-feed.ts  view-profile.js  view-profile.ts
app/summer/web/entity/: source-imap-create.ts  source-imap-edit.ts  source-imap-list.ts  source-rss-create.ts  source-rss-edit.ts  source-rss-list.ts
app/summer/web/module/: summer-module.ts
app/transact/: BUILD
bzl/: aws.bzl  cdk.bzl  defs.bzl  grpc_web.bzl  k8s.bzl  minikube.bzl  pg_migrate.bzl  prompt.bzl  proto.bzl  push_image.bzl  run_in_docker.bzl  run_in_ns.bzl  ts.bzl
bzl/private/: PROTO_JSON_SCHEMA_FIX.md  grpc_web.bzl  module.bzl  proto_json_schema.bzl  proto_json_schema.bzl.fixed  server.bzl  service.bzl  web.bzl
dev/logos/: BUILD
dev/logos/app/: App.java  AppModule.java  BUILD  defs.bzl
dev/logos/app/controller/: AppController.java  BUILD  Route53ZoneCreator.java
dev/logos/app/register/: BUILD  RegisterModuleProcessor.java  registerModule.java
dev/logos/auth/credentials/: AuthTokenCallCredentials.java  BUILD
dev/logos/auth/machine/: BUILD  Machine.java  MachineContext.java
dev/logos/auth/principal/: BUILD  Principal.java
dev/logos/auth/user/: NotAuthenticated.java  User.java  UserContext.java
dev/logos/author/: BUILD  author-module.ts  author.ts  state.ts  tasks.ts
dev/logos/author/agents/: agent.ts  console.ts
dev/logos/author/models/: model.ts  ollama.ts  openai.ts
dev/logos/channel/: BUILD  ClientFactory.java
dev/logos/gateway/: BUILD  clusterissuer.yaml  envoygateway.yaml  externaldns.yaml
dev/logos/infra/: BUILD  app.ts  infra.test.ts  tsconfig.json
dev/logos/ingress/: BUILD  externaldns.yaml
dev/logos/job/: Job.java  JobState.java
dev/logos/logger/: BUILD  LoggerFactory.java  LoggerFactoryImpl.java  LoggerModule.java  LoggerModuleTest.java
dev/logos/module/: BUILD  DatabaseModule.java  ModuleLoader.java  RegisterModuleProcessor.java  registerModule.java
dev/logos/service/: BUILD  Service.java
dev/logos/stack/: BUILD  app.ts  eks_production.yaml  infra.test.js  tsconfig.json
dev/logos/user/: AnonymousUser.java  BUILD  NotAuthenticated.java  User.java  UserContext.java
dev/logos/web/: BUILD
scripts/: console.sh  db_tunnel.sh  debug.sh  dev_server.sh  dev_setup.sh  env.sh  ganache.sh  maven_repin.sh  minikube_psql.sh  setup.sh  stolonctl.sh  up.sh
tools/: BUILD  bazel-env.sh  bazel_env.bzl  corretto.bzl
tools/flatten-json-schema/: BUILD  flatten-json-schema.mts
(+426 files in other folders)
