bazel_dep(
    name = "aspect_bazel_lib",
    version = "2.7.7",
)

aspect_bazel_lib = use_extension("@aspect_bazel_lib//lib:extensions.bzl", "toolchains")
use_repo(aspect_bazel_lib, "coreutils_toolchains")
use_repo(aspect_bazel_lib, "jq_toolchains")
use_repo(aspect_bazel_lib, "yq_toolchains")

bazel_dep(
    name = "container_structure_test",
    version = "1.16.0",
)
bazel_dep(
    name = "gazelle",
    version = "0.34.0",
)
bazel_dep(
    name = "rules_pkg",
    version = "0.9.1",
)

# rules_js
bazel_dep(name = "aspect_rules_js", version = "1.42.3")
bazel_dep(name = "rules_nodejs", version = "5.8.2")

node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node")
node.toolchain(node_version = "16.14.2")
#################################

npm = use_extension(
    "@aspect_rules_js//npm:extensions.bzl",
    "npm",
    dev_dependency = True,
)
npm.npm_translate_lock(
    name = "npm",
    pnpm_lock = "//:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
)
use_repo(npm, "npm")

pnpm = use_extension("@aspect_rules_js//npm:extensions.bzl", "pnpm")

# Allows developers to use the matching pnpm version, for example:
# bazel run -- @pnpm --dir /home/runner/work/rules_js/rules_js install
use_repo(pnpm, "pnpm")

# rules_ts
bazel_dep(
    name = "aspect_rules_ts",
    version = "2.4.2",
)

rules_ts_ext = use_extension(
    "@aspect_rules_ts//ts:extensions.bzl",
    "ext",
    dev_dependency = True,
)
rules_ts_ext.deps()
use_repo(rules_ts_ext, "npm_typescript")

# rules_rollup
bazel_dep(name = "aspect_rules_rollup", version = "1.0.3")

rollup_ext = use_extension("@aspect_rules_rollup//rollup:extensions.bzl", "ext")
rollup_ext.deps()

# rules_go
bazel_dep(
    name = "rules_go",
    version = "0.42.0",
)

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.20.3")

# rules_oci
bazel_dep(
    name = "rules_oci",
    version = "1.4.0",
)

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "alpine_image",
    digest = "sha256:c5c5fda71656f28e49ac9c5416b3643eaa6a108a8093151d6d1afc9463be8e33",
    image = "docker.io/library/alpine",
    # tag = "3.18",
)
use_repo(oci, "alpine_image")
oci.pull(
    name = "envoy_image_old",
    #digest = "sha256:5d5619b0d3d4311bfef48783c04df1e5aed71615710b876b951bd70c1e1e18ee",
    image = "docker.io/envoyproxy/envoy",
    platforms = ["linux/amd64"],
    tag = "tools-v1.29-latest",
)
use_repo(oci, "envoy_image_old")
oci.pull(
    name = "distroless_java_container",
    digest = "sha256:c7151ad9a6787379ccf205e14b9ef18e0757e56d789c155269fc7b5f83d2a93e",
    image = "gcr.io/distroless/java17-debian11",
    # tag = "latest",
)
use_repo(oci, "distroless_java_container")
oci.pull(
    name = "console_container",
    digest = "sha256:459be81018f0481adcf57ca0ab3e4fba19cfcc48f2280e1d672343d10dccb8a3",
    image = "docker.io/alpine/socat",
    # tag = "latest",
)
use_repo(oci, "console_container")
oci.pull(
    name = "nginx_container",
    digest = "sha256:e06ffa63074d69b12c7f7712d7aebc4cc72d25217e55788d54160a2bd77182f4",
    image = "docker.io/library/nginx",
    # tag = "stable-alpine",
)
use_repo(oci, "nginx_container")
oci.pull(
    name = "stolon_container",
    digest = "sha256:5d8a8292d9a008ba29cbe0285bd5d4d041a75945e1ffedb14b1bfbee5b2414fa",
    image = "docker.io/sorintlab/stolon",
    # tag = "master-pg14",
)
use_repo(oci, "stolon_container")
oci.pull(
    name = "distroless_python_image",
    digest = "sha256:baac841d0711ecbb673fa410a04793f876a242a6ca801d148ef867f02745b156",
    image = "gcr.io/distroless/python3",
    platforms = [
        "linux/amd64",
        "linux/arm64/v8",
    ],
)
use_repo(oci, "distroless_python_image")

# rules_apko
bazel_dep(
    name = "rules_apko",
    version = "1.2.1",
)

apk = use_extension("@rules_apko//apko:extensions.bzl", "apko")

# cronjob image
apk.translate_lock(
    name = "base_cronjob_image",
    lock = "//vendor/apko:base_cronjob.lock.json",
)
use_repo(apk, "base_cronjob_image")

# envoy image
apk.translate_lock(
    name = "envoy_image",
    lock = "//vendor/apko:envoy.lock.json",
)
use_repo(apk, "envoy_image")
